# ve-storage-uni-cli

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
Formula/: tos-cli.rb  ve-adrive-cli.rb  ve-tos-cli.rb
crates/adrive/: Cargo.toml
crates/adrive/src/: lib.rs  registry.rs
crates/adrive/src/cli/: high_level.rs  meta.rs  mod.rs
crates/adrive/src/domain/: client.rs  mod.rs  rate_limiter.rs  types.rs
crates/adrive/src/handler/: common.rs  high_level.rs  meta.rs  mod.rs
crates/tos/: Cargo.toml
crates/tos-core/: Cargo.toml  build.rs
crates/tos-core/src/: lib.rs
crates/tos-core/src/agent/: capabilities.rs  describe.rs  dryrun.rs  envelope.rs  error.rs  global_args.rs  help.rs  mod.rs  output.rs  pagination.rs  pipe.rs  progress.rs
crates/tos-core/src/cli/: global.rs  mod.rs
crates/tos-core/src/domain/: bucket.rs  mod.rs  object.rs
crates/tos-core/src/infra/: auth.rs  client.rs  config.rs  crypto.rs  discovery.rs  mod.rs  retry.rs
crates/tos-core/src/mcp/: mod.rs  server.rs  tools.rs
crates/tos-core/src/transfer/: checkpoint.rs  concurrency.rs  download.rs  mod.rs  ratelimit.rs  upload.rs
crates/tos-core/tests/: test_agent_output.rs  test_config.rs  test_dryrun.rs  test_error.rs  test_help.rs  test_output.rs  test_pagination.rs  test_retry.rs  test_transfer.rs
crates/tos/src/: lib.rs  registry.rs
crates/tos/src/cli/: high_level.rs  low_level.rs  meta.rs  mod.rs
crates/tos/src/domain/: bucket.rs  core.rs  mod.rs  multipart.rs  object.rs
crates/tos/src/handler/: advanced.rs  bucket.rs  bucket_config.rs  common.rs  config.rs  high_level.rs  meta.rs  mod.rs  multipart.rs  object.rs  turbo.rs
crates/toscli/: Cargo.toml
crates/toscli/src/: lib.rs  registry.rs
crates/toscli/src/cli/: meta.rs  mod.rs
crates/toscli/src/handler/: high_level.rs  meta.rs  mod.rs
crates/tostable/: Cargo.toml
crates/tostable/src/: lib.rs
crates/tostable/src/cli/: low_level.rs  meta.rs  mod.rs
crates/tosvector/: Cargo.toml
crates/tosvector/src/: lib.rs
crates/tosvector/src/cli/: low_level.rs  mod.rs
docs/: api_implementation_principles.md  bucket_api_reference.md  high_level_commands_plan.md
packaging/: README.md  darwin_build.md
packaging/cargo/tos-cli/: Cargo.toml
packaging/cargo/tos-cli/src/: main.rs
packaging/cargo/tos-cli/tests/: direct_invocation.rs
packaging/cargo/ve-adrive-cli/: Cargo.toml
packaging/cargo/ve-adrive-cli/src/: main.rs
packaging/cargo/ve-adrive-cli/tests/: direct_invocation.rs
packaging/cargo/ve-tos-cli/: Cargo.toml
packaging/cargo/ve-tos-cli/src/: main.rs
packaging/cargo/ve-tos-cli/tests/: direct_invocation.rs
packaging/homebrew/: formulae.json
packaging/install/: install.sh
packaging/npm/: packages.json
packaging/pip/: launcher.py  packages.json
packaging/release/: platforms.json
packaging/scripts/: archives.py  homebrew.py  npm.py  pip.py  release.py  winget.py
packaging/tests/: test_cargo_publish_metadata.py  test_homebrew.py  test_pip.py  test_release.py  test_skills.py
packaging/winget/: packages.json
scripts/: generate_control_plane.py  generate_skill_md.py
scripts/e2e/: README.md  conftest.py  pyproject.toml
scripts/e2e/_lib/: __init__.py  cases.py  envelope.py  registry.py  runner.py  surface_matrix.py
scripts/e2e/adrive/: test_high_level.py  test_utilities_agent_audit.py
scripts/e2e/tos/: __init__.py  test_advanced_group_matrix.py  test_bucket_config_matrix.py  test_bucket_lifecycle.py  test_core_object_matrix.py  test_discovery.py  test_envelope_schema.py  test_error_codes.py  test_generated_surface_matrix.py  test_global_parameter_matrix.py  test_high_level_parameter_matrix.py  test_low_level_advanced_accelerator.py  test_low_level_advanced_ap.py  test_low_level_advanced_cap.py  test_low_level_advanced_control.py  test_low_level_advanced_data_process.py  test_low_level_advanced_dataset.py  test_low_level_advanced_mrap.py  test_low_level_advanced_object_set.py  test_low_level_bucket_config_access_monitor.py  test_low_level_bucket_config_acl.py  test_low_level_bucket_config_cdn_notification.py  test_low_level_bucket_config_cors.py  test_low_level_bucket_config_custom_domain.py  test_low_level_bucket_config_encryption.py  test_low_level_bucket_config_https_config.py  test_low_level_bucket_config_intelligent_tiering.py  test_low_level_bucket_config_inventory.py  test_low_level_bucket_config_lifecycle.py  test_low_level_bucket_config_logging.py  test_low_level_bucket_config_max_age.py  test_low_level_bucket_config_mirror.py  test_low_level_bucket_config_notification.py  test_low_level_bucket_config_pay_by_traffic.py  test_low_level_bucket_config_payment.py  test_low_level_bucket_config_policy.py  test_low_level_bucket_config_quota.py  test_low_level_bucket_config_real_time_log.py  test_low_level_bucket_config_redundancy_transition.py  test_low_level_bucket_config_rename.py  (+18 more)
skills/tos-cli/: SKILL.md
skills/tos-cli/agents/: openai.yaml
skills/ve-adrive-cli/: SKILL.md
skills/ve-adrive-cli/agents/: openai.yaml
skills/ve-adrive-cli/references/: safety.md
skills/ve-tos-cli/: SKILL.md
skills/ve-tos-cli/agents/: openai.yaml
skills/ve-tos-cli/references/: safety.md
src/: lib.rs  main.rs
tests/: advanced_principles_test.rs  bucket_config_help_test.rs  bucket_config_live_matrix_test.rs  bucket_config_principles_test.rs  bucket_test.rs  cli_basic.rs  config_test.rs  core_bucket_multipart_turbo_live_matrix_test.rs  core_help_test.rs  core_object_live_matrix_test.rs  core_principles_test.rs  core_smoke_test.rs  functional_agent_contract_test.rs  high_level_principles_test.rs
