# Copyright (c) 2025 Beijing Volcano Engine Technology Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tos-core"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Shared configuration, output, transfer, agent, and MCP utilities for Volcengine storage CLIs"
homepage = "https://github.com/volcengine/ve-storage-uni-cli"
repository = "https://github.com/volcengine/ve-storage-uni-cli"
build = "build.rs"
include = [
    "/Cargo.toml",
    "/build.rs",
    "/src/**",
]

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
indicatif = { workspace = true }
comfy-table = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
toml = "0.8"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
jmespath = { workspace = true }
strsim = { workspace = true }
ulid = { workspace = true }
rmcp = { workspace = true }
