# Copyright (c) 2025 Beijing Volcano Engine Technology Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tos-cli-core"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Dedicated ByteCloud TOS high-level command surface"
homepage = "https://github.com/volcengine/ve-storage-uni-cli"
repository = "https://github.com/volcengine/ve-storage-uni-cli"
include = [
    "/Cargo.toml",
    "/src/**",
]

[lib]
name = "tos_cli"
path = "src/lib.rs"

[dependencies]
tos-core = { version = "1.0.0", path = "../tos-core" }
ve-tos-cli = { package = "ve-tos-cli-core", version = "1.0.0", path = "../tos" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
