# Copyright (c) 2025 Beijing Volcano Engine Technology Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ve-storage-uni-cli-e2e"
version = "0.1.0"
description = "End-to-end tests for ve-storage-uni-cli against real TOS and ADrive"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tos", "adrive"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (>30s) — run sparingly",
    "destructive: tests that mutate real bucket state",
    "live: tests that require valid TOS credentials",
    "adrive: tests that require valid ADrive credentials",
]

[tool.ruff]
line-length = 100
target-version = "py39"
